--- a/sightline/.project
+++ b/sightline/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SightlineTestAutomation</name>
+	<name>sightline</name>
 	<comment></comment>
 	<projects>
 	</projects>
