--- a/sightline/pom.xml
+++ b/sightline/pom.xml
@@ -107,6 +107,13 @@
    <version>4.1</version> 
 </dependency> 
   
+  <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.6</version>
+</dependency>
+  
   
   </dependencies>
 </project>
