--- a/sightline/pom.xml
+++ b/sightline/pom.xml
@@ -106,6 +106,28 @@
    <artifactId>opencsv</artifactId> 
    <version>4.1</version> 
 </dependency> 
+
+ <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.6</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.14</version>
+</dependency>
+
+
+  <dependency>
+    <groupId>de.redsix</groupId>
+    <artifactId>pdfcompare</artifactId>
+    <version>1.1.25</version> 
+  </dependency>
+
   
   
   </dependencies>
