--- a/sightline/pom.xml
+++ b/sightline/pom.xml
@@ -55,6 +55,12 @@
     	<artifactId>poi</artifactId>
     	<version>3.7</version>
 	</dependency>
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.10-FINAL</version>
+</dependency>
+
 	
 	
 	<dependency>
