--- a/sightline/pom.xml
+++ b/sightline/pom.xml
@@ -205,6 +205,13 @@
 	    <version>1.1.1</version>
 	</dependency>
 	
+	<dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.1</version>
+        <scope>provided</scope>
+</dependency>
+	
 	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
 		<dependency>
     		<groupId>log4j</groupId>
