--- a/sightline/pom.xml
+++ b/sightline/pom.xml
@@ -16,8 +16,9 @@
     <cucumber.version>3.0.1</cucumber.version>
     <courgette.version>2.4.0</courgette.version>
     <spring.version>4.3.28.RELEASE</spring.version>
-  </properties>
-  
+  </properties> 
+
+
  <build>
     <plugins>
       <plugin>
@@ -28,25 +29,54 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+    
+ 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
+        <!-- <version>2.18.1</version> -->
+        <version>3.0.0-M5</version>
+        
         <configuration>
-          <forkCount>0</forkCount>
+        <forkCount>0</forkCount>
+        
+       <!-- This is used to execute from Jenkins --> 
+         <!-- 
+          <systemPropertyVariables>
+             <name>TestEnvironment</name>
+          	<value>${TestEnvironment}</value>          
+          </systemPropertyVariables>
+          <suiteXmlFiles>
+            <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+          </suiteXmlFiles>         
+          -->
+          
+          <!-- --> 
           <suiteXmlFiles>
             <suiteXmlFile>testng.xml</suiteXmlFile>
           </suiteXmlFiles>
+          
+         <annotationProcessorPaths>
+	<path>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.18.20</version>
+	</path>
+</annotationProcessorPaths> 
         </configuration>
+        
       </plugin>
+     
     </plugins>
-
+    
      <resources>
          <resource>
              <directory>src/main/resources</directory>
          </resource>
-     </resources>
+     </resources>         
   </build>
+ 
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -79,40 +109,10 @@
 	<dependency>
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
-	    <version>${testng.version}</version>
-	   <scope>compile</scope>
+	    <version>6.14.3</version>
+	  <!-- <scope>compile</scope>  --> 
 	</dependency>
-	<dependency>
-	<groupId>io.cucumber</groupId>
-      <artifactId>cucumber-java</artifactId>
-      <version>${cucumber.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.cucumber</groupId>
-      <artifactId>cucumber-java8</artifactId>
-      <version>${cucumber.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.cucumber</groupId>
-      <artifactId>cucumber-spring</artifactId>
-      <version>${cucumber.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.cucumber</groupId>
-      <artifactId>cucumber-testng</artifactId>
-      <version>${cucumber.version}</version>
-      <scope>compile</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
+<!--     <dependency>
         <groupId>io.github.prashant-ramcharan</groupId>
         <artifactId>courgette-jvm</artifactId>
         <version>${courgette.version}</version>
@@ -128,7 +128,8 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
         <version>${spring.version}</version>
-    </dependency>
+    </dependency> -->
+    
 	<!-- https://mvnrepository.com/artifact/com.fasterxml/jackson-xml-databind -->
 	<dependency>
     <groupId>com.fasterxml</groupId>
@@ -143,12 +144,7 @@
     <artifactId>jackson-mapper-asl</artifactId>
     <version>1.5.0</version>
 </dependency>
-<dependency>
-	    <groupId>com.relevantcodes</groupId>
-	    <artifactId>extentreports</artifactId>
-	    <version>2.41.2</version>
-	</dependency>
-    
+  
 <dependency>
     <groupId>com.fasterxml.jackson.dataformat</groupId>
     <artifactId>jackson-dataformat-xml</artifactId>
@@ -211,6 +207,28 @@
    			<artifactId>log4j</artifactId>
     		<version>1.2.12</version>
 		</dependency>
-  
+
+	<!-- This dependency is used for the extended report -->
+		<dependency>
+    		<groupId>com.aventstack</groupId>
+    		<artifactId>extentreports</artifactId>
+    		<version>3.1.5</version>
+		</dependency>
+	
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.18.20</version>
+		<scope>provided</scope>
+	</dependency>
+
+	
+	<!-- https://mvnrepository.com/artifact/net.rcarz/jira-client -->
+		<dependency>
+    		<groupId>net.rcarz</groupId>
+    		<artifactId>jira-client</artifactId>
+   			<version>0.5</version>
+		</dependency>
+	
   </dependencies>
 </project>
