--- a/sightline/pom.xml
+++ b/sightline/pom.xml
@@ -256,5 +256,11 @@
 			<artifactId>xmlbeans</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.lingala.zip4j/zip4j -->
+      <dependency>
+      <groupId>net.lingala.zip4j</groupId>
+	  <artifactId>zip4j</artifactId>
+	  <version>2.9.1</version>
+      </dependency>
 	</dependencies>
 </project>
