--- a/sightline/pom.xml
+++ b/sightline/pom.xml
@@ -262,5 +262,11 @@
 	  <artifactId>zip4j</artifactId>
 	  <version>2.9.1</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/com.asprise.ocr/java-ocr-api -->
+<dependency>
+    <groupId>com.asprise.ocr</groupId>
+    <artifactId>java-ocr-api</artifactId>
+    <version>15.3.0.3</version>
+</dependency>
 	</dependencies>
 </project>
