Commiting new dependencies and jar files

--- a/sightline/.classpath
+++ b/sightline/.classpath
@@ -23,5 +23,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/zfj-cloud-rest-client-3.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
