--- a/sightline/pom.xml
+++ b/sightline/pom.xml
@@ -18,6 +18,18 @@
 		<courgette.version>2.4.0</courgette.version>
 		<spring.version>4.3.28.RELEASE</spring.version>
 	</properties>
+	
+	<repositories>
+
+              <repository>
+
+                     <id>atlassian-public</id>
+
+                     <url>https://packages.atlassian.com/maven/repository/public</url>
+
+              </repository>
+
+       </repositories>
 
 	<build>
 		<plugins>
@@ -49,6 +61,118 @@
 		</resources>
 	</build>
 	<dependencies>
+	<!-- JIRA Changes START -->
+ 
+        <dependency>
+ 
+            <groupId>com.google.guava</groupId>
+ 
+            <artifactId>guava</artifactId>
+ 
+            <version>30.1.1-jre</version>
+ 
+        </dependency>
+ 
+ 
+ 
+        <dependency>
+ 
+            <groupId>commons-configuration</groupId>
+ 
+            <artifactId>commons-configuration</artifactId>
+ 
+            <version>1.10</version>
+ 
+        </dependency>
+ 
+        <dependency>
+ 
+            <groupId>com.atlassian.fugue</groupId>
+ 
+            <artifactId>fugue</artifactId>
+ 
+            <version>3.0.0-m007</version>
+ 
+        </dependency>
+ 
+        <dependency>
+ 
+            <groupId>com.atlassian.connect</groupId>
+ 
+            <artifactId>ac-play-java_2.10</artifactId>
+ 
+            <version>0.10.1</version>
+ 
+        </dependency>
+ 
+
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+</dependency>
+ 
+ 
+
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+ 
+        <dependency>
+ 
+            <groupId>org.json</groupId>
+ 
+            <artifactId>json</artifactId>
+ 
+            <version>20211205</version>
+ 
+        </dependency>
+ 
+ 
+        <dependency>
+ 
+            <groupId>ch.qos.logback</groupId>
+ 
+            <artifactId>logback-classic</artifactId>
+ 
+            <version>1.2.3</version>
+ 
+        </dependency>
+ 
+        <dependency>
+ 
+            <groupId>ch.qos.logback</groupId>
+ 
+            <artifactId>logback-classic</artifactId>
+ 
+            <version>1.2.3</version>
+ 
+            <exclusions>
+ 
+                <exclusion>
+ 
+                    <groupId>org.slf4j</groupId>
+ 
+                    <artifactId>slf4j-log4j12</artifactId>
+ 
+ 
+                </exclusion>
+ 
+            </exclusions>
+ 
+        </dependency>
+ 
+ 
+        <dependency>
+ 
+            <groupId>ch.qos.logback</groupId>
+ 
+            <artifactId>logback-core</artifactId>
+ 
+            <version>1.2.3</version>
+ 
+        </dependency>
+ 
+ 
+        <!-- JIRA Changes END -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -59,7 +183,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.4.0</version>
+			<version>3.141.59</version>
 		</dependency>
 
 		<dependency>
@@ -185,6 +309,12 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.6</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
 
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
