--- a/sightline/.classpath
+++ b/sightline/.classpath
@@ -24,7 +24,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/zfj-cloud-rest-client-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/com/thed/zephyr/connect/zfj-cloud-rest-client-3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/com/thed/zephyr/connect/zfj-cloud-rest-client-3.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
